# rs_crypto_msg

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
prisma/: dev.db  dev.db-journal  schema.prisma
prisma/migrations/20230618154334_init/: migration.sql
prisma/migrations/20230619110805_init/: migration.sql
prisma_cli/: Cargo.toml
src/: event_data.rs  main.rs  prisma.rs
src/helper/: helper.rs
src/sign/: event_signature.rs  mod.rs
src/websocket/: mod.rs  ws.rs
