[package]
name = "rs_crypto_msg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.27.0",features = ["rand-std","bitcoin-hashes-std"] }
sha256 = "1.1.4"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
serde = "1.0.164"
tokio = "1.28.2"
hex = "0.4.3"

[workspace]
members = [
		"prisma_cli",
]
